Change version of LibGDX dependencies to dynamic

--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,6 @@ plugins {
     id 'maven'
 }
 
-ext {
-    gdxVersion = '1.9.10'
-}
-
 group 'com.github.acanthite.gdx'
 version '0.1-SNAPSHOT'
 
@@ -23,9 +19,8 @@ repositories {
 }
 
 dependencies {
-    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-    implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation "com.badlogicgames.gdx:gdx:1.9.+"
+    implementation "com.badlogicgames.gdx:gdx-freetype:1.9.+"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
